# br.ufrgs.inf01121.gravsim

./: .gitignore  DEPENDENCIES  REQUIREMENTS  compile.sh  requir.txt
src/: CMakeLists.txt  cmake_defines.hh.in  main.cc  main.h  util.hh
src/assets/: CMakeLists.txt  electric.cc  electric.hh  electron.cc  electron.hh  gravitron.cc  gravitron.hh  particle.cc  particle.hh
src/engine/: CMakeLists.txt  gsobject.cc  gsobject.hh  logger.cc  logger.hh  runner.cc  runner.hh  storage.cc  storage.hh
src/exception/: badfileload.hh  badindex.hh  badnewfile.hh  base.hh
src/gui/: .#dialog.hh  CMakeLists.txt  canvas.cc  canvas.h  canvas.hh  customDialog.cc  customDialog.hh  dialog.cc  dialog.hh  point.cc  point.hh  window.cc  window.h  window.hh
